fixing website layout issues

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -59,7 +59,7 @@
   .website-section .splide .splide__slide img,
   .website-section .splide__track .splide__slide img,
   .website-section .splide__list .splide__slide img {
-    width: 135%;
+    width: 140%;
   }
 }
 
@@ -94,6 +94,8 @@
   display: grid;
   -ms-grid-columns: 50% auto;
       grid-template-columns: 50% auto;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 @media (min-width: 992px) {
@@ -106,7 +108,6 @@
 .website-section .inner .laptop {
   position: relative;
   width: 80%;
-  height: auto;
   max-width: 500px;
   margin: auto;
   -webkit-transition: 0.2s;
@@ -137,7 +138,7 @@
   margin: auto;
   background: -webkit-gradient(linear, left bottom, left top, from(white), to(rgba(235, 235, 235, 0.6)));
   background: linear-gradient(to top, white, rgba(235, 235, 235, 0.6));
-  height: 70%;
+  height: 150px;
   width: 70%;
   max-width: 320px;
   padding: 20px 8px 0px 8px;
@@ -153,19 +154,26 @@
   .website-section .inner .info {
     padding: 26px 20px 10px 20px;
     width: 65%;
-    height: 70%;
+    height: 180px;
   }
 }
 
 @media (min-width: 576px) {
   .website-section .inner .info {
     padding: 30px 26px 10px 26px;
+    height: 200px;
   }
 }
 
 @media (min-width: 768px) {
   .website-section .inner .info {
-    height: 50%;
+    height: 240px;
+  }
+}
+
+@media (min-width: 992px) {
+  .website-section .inner .info {
+    height: 300px;
   }
 }
 
