--- a/src/css/_Website.scss
+++ b/src/css/_Website.scss
@@ -40,7 +40,7 @@
       filter: brightness(75%) blur(5px);
 
       @include sm {
-        width: 135%;
+        width: 140%;
       }
 
       @include md {
@@ -62,6 +62,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 50% auto;
+    align-content: center;
 
     @include lg {
       width: 80%;
@@ -71,7 +72,6 @@
     .laptop {
       position: relative;
       width: 80%;
-      height: auto;
       max-width: 500px;
       margin: auto;
       transition: 0.2s;
@@ -102,7 +102,7 @@
         rgba(255, 255, 255, 1),
         rgba(235, 235, 235, 0.6)
       );
-      height: 70%;
+      height: 150px;
       width: 70%;
       max-width: 320px;
       padding: 20px 8px 0px 8px;
@@ -115,15 +115,20 @@
       @include custom(500) {
         padding: 26px 20px 10px 20px;
         width: 65%;
-        height: 70%;
+        height: 180px;
       }
 
       @include sm {
         padding: 30px 26px 10px 26px;
+        height: 200px;
       }
 
       @include md {
-        height: 50%;
+        height: 240px;
+      }
+
+      @include lg {
+        height: 300px;
       }
 
       .info--inner {
